VSE: Right-Click does not select directory #30324

Closed
opened 2012-02-23 19:13:39 +01:00 by Brian Szepatowski · 5 comments

%%%In WinXP SP3 32-Bit can't right-click to select directory of images.%%%

%%%In WinXP SP3 32-Bit can't right-click to select directory of images.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I'm not sure I understand this report correctly, but I guess this is about missing functionality in the file browser, compared to 2.4x? The 2.5 user interface isn't really guaranteed to work exactly like 2.4x, there's some tools removed and some added, so this may not be considered a bug. Clicking on the folder and pressing A is also fairly quick.

Assiging to Andrea, it may not be too hard to bring this back.%%%

%%%I'm not sure I understand this report correctly, but I guess this is about missing functionality in the file browser, compared to 2.4x? The 2.5 user interface isn't really guaranteed to work exactly like 2.4x, there's some tools removed and some added, so this may not be considered a bug. Clicking on the folder and pressing A is also fairly quick. Assiging to Andrea, it may not be too hard to bring this back.%%%

%%%Hi Brecht,

Yes, you are correct. When it didn't work like it did in 2.4x I went to the manual and it hasn't been changed so I thought it was still suppose to have the same functionality.

Brian%%%

%%%Hi Brecht, Yes, you are correct. When it didn't work like it did in 2.4x I went to the manual and it hasn't been changed so I thought it was still suppose to have the same functionality. Brian%%%

%%%fixed r50548.%%%

%%%fixed r50548.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30324
No description provided.