fix [#30324] VSE: Right-Click does not select directory